sm6150-common: Support for auto dc dimming
Signed-off-by: lemezohaib <zhbkhan644@gmail.com>

--- a/overlay-aosp/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-aosp/frameworks/base/core/res/res/values/config.xml
@@ -20,4 +20,8 @@
         <item>org.lineageos.aperture</item>
         <item>org.lineageos.aperture.dev</item>
     </string-array>
+
+    <!-- Defines the sysfs attribute path used by the device
+         to enable/disable DC dimming. -->
+    <string name="config_deviceDcDimmingSysfsNode">/sys/devices/platform/soc/soc:qcom,dsi-display/anti_flicker</string>
 </resources>
